# portaudio_tut

./: .gitignore  CMakeLists.txt  Readme.txt  paex_sine_c++.cpp
awstream_install/Debug/lib/: aws-c-auth.lib  aws-c-cal.lib  aws-c-compression.lib  aws-c-http.lib  aws-c-io.lib
awstream_install/Release/lib/: aws-c-auth.lib  aws-c-cal.lib  aws-c-common.lib  aws-c-compression.lib  aws-c-event-stream.lib  aws-c-http.lib  aws-c-io.lib  aws-c-mqtt.lib  aws-c-s3.lib  aws-checksums.lib  aws-cpp-sdk-transcribestreaming.lib  aws-crt-cpp.lib
awstream_install/include/aws/crt/: Config.h
awstream_install/lib/: aws-c-common.lib  aws-c-event-stream.lib  aws-c-mqtt.lib  aws-c-s3.lib  aws-checksums.lib
awstream_install/lib/cmake/AWSSDK/: platformDeps.cmake
awstream_install/lib/cmake/aws-cpp-sdk-core/: aws-cpp-sdk-core-targets-debug.cmake  aws-cpp-sdk-core-targets.cmake
awstream_install/lib/cmake/testing-resources/: testing-resources-targets.cmake
fftw_install/lib/: fftw3.lib
fftw_install/lib/cmake/fftw3/: FFTW3Config.cmake
fftw_install/lib/pkgconfig/: fftw3.pc
fftw_install/lib_x64/: fftw3.lib
fftw_install/lib_x64/cmake/fftw3/: FFTW3Config.cmake  FFTW3LibraryDepends.cmake
fftw_install/lib_x64/pkgconfig/: fftw3.pc
libsamplerate/: .gitignore  libsamplerate.def  libsamplerate.vcxproj  libsamplerate.vcxproj.filters  libsamplerate_debug.def  vs2019Build.cpp  vs2019Build.sln  vs2019Build.vcxproj  vs2019Build.vcxproj.filters
libsamplerate/src/: config.h  float_cast.h
libsamplerate/tests/: audio_out.c  float_short_test.c  main_src-evaluate.c  main_varispeed-play.c  src-evaluate.c  termination_test.c  util.c
portaudio/lib/pkgconfig/: portaudio-2.0.pc
portaudio_install/bin_x64/Debug/: portaudio_static_x64.lib
portaudio_install/bin_x64/Release/: portaudio_static_x64.lib  portaudio_x64.lib
portaudio_install/bin_x86/Debug/: portaudio_static_x86.lib
portaudio_install/bin_x86/Release/: portaudio_static_x86.lib  portaudio_x86.lib
portaudio_install/lib/: portaudio_static_x86.lib  portaudio_x86.lib
portaudio_install/lib/pkgconfig/: portaudio-2.0.pc
portaudio_src/: CMakeLists.txt
(+49 files in other folders)
